--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                             <div class="text">
                                 <span class="subheading">Hello!</span>
-                                <h1 class="mb-4 mt-3">I'm <span>Kerem Danışmaz</span></h1>
+                                <h1 class="mb-4 mt-3">I'm <span>Kerem Danismaz</span></h1>
                                 <h2 class="mb-4">A Freelance Web Developer</h2>
                                 <p><a href="#about-section" class="btn btn-primary  py-3 px-3">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
                             </div>
