--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   
       <a class="navbar-brand" href="index.html" style="color: #ffbd39;">KEYDI</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"></span>  MENU
       </button>
 
       <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
@@ -55,13 +55,13 @@
   </nav>
 
 
-<section id="home-section" class="hero">
+<section id="home-section" >
     <div class="home-slider  owl-carousel">
         <div class="slider-item ">
          
             <div class="container">
                 <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
-                    data-scrollax-parent="true">
+                    >
 
                     <div class="one-third js-fullheight order-md-last  img image_1" 
                         style=" background-image:url(images/at.png);  background-position-y: 30px;   ">
