--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
             </div>
 
-            <div class="col-md-6">
-                <div class="jumbotron " style="background-color: black; font-size: 100px;">
+            <div class="col-md-6 "  style="background-image: url('images/pençe.png');>
+                <div class="jumbotron >
 
                     <h1 class="mb-4 mt-3" style="font-size: 40px;"> <span
                             style="color: #ffbd39; font-family: 'Piedra', cursive; font-size: 20px;">Hello!</span></h1>
