--- a/index.html
+++ b/index.html
@@ -67,9 +67,14 @@
 
             </div>
 
-            <div class="col-md-6 "  style="background-image: url('images/pençe.png');>
+            <div class="col-md-6 cs "  style="background-image: url('images/pençe.png'); >
                 <div class="jumbotron >
-
+                        <style>
+                         .cs
+                         {
+                            background-repeat: no-repeat;
+                         }
+                        </style>
                     <h1 class="mb-4 mt-3" style="font-size: 40px;"> <span
                             style="color: #ffbd39; font-family: 'Piedra', cursive; font-size: 20px;">Hello!</span></h1>
                     <h1 class="mb-4 mt-3" style="font-size: 45px;">I'm <span
