--- a/Blog2.html
+++ b/Blog2.html
@@ -32,27 +32,31 @@
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
 
-  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">KEYDI</a>
-      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse"
-        data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="oi oi-menu"></span> Menu
-      </button>
 
-      <div class="collapse navbar-collapse" id="ftco-nav">
-        <ul class="navbar-nav nav ml-auto">
-          <li class="nav-item"><a href="index.html#home-section" class="nav-link"><span>Home</span></a></li>
-          <li class="nav-item"><a href="index.html#about-section" class="nav-link"><span>About</span></a></li>
-          <li class="nav-item"><a href="index.html#resume-section" class="nav-link"><span>Resume</span></a></li>
-          <li class="nav-item"><a href="index.html#skills-section" class="nav-link"><span>Skills</span></a></li>
-          <li class="nav-item"><a href="index.html#projects-section" class="nav-link"><span>Projects</span></a></li>
-          <li class="nav-item"><a href="index.html#blog-section" class="nav-link"><span>My Blog</span></a></li>
-          <li class="nav-item"><a href="index.html#contact-section" class="nav-link"><span>Contact</span></a></li>
-        </ul>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-dark   ftco-navbar-light site-navbar-target ">
+    <div class="container">
+
+        <a class="navbar-brand" href="index.html" style="color: #ffbd39;">KEYDI</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span> Menu
+        </button>
+
+        <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+            <ul class="navbar-nav  ml-auto">
+                <li class="nav-item"><a href="index.html#home-section" class="nav-link "><span>Home</span></a></li>
+                <li class="nav-item"><a href="index.html#about-section" class="nav-link"><span>About</span></a></li>
+                <li class="nav-item"><a href="index.html#resume-section" class="nav-link"><span>Resume</span></a></li>
+                <li class="nav-item"><a href="index.html#skills-section" class="nav-link"><span>Skills</span></a></li>
+                <li class="nav-item"><a href="index.html#projects-section" class="nav-link"><span>Projects</span></a>
+                </li>
+                <li class="nav-item"><a href="index.html#blog-section" class="nav-link"><span>My Blog</span></a></li>
+                <li class="nav-item"><a href="index.html#contact-section" class="nav-link"><span>Contact</span></a></li>
+            </ul>
+        </div>
     </div>
-  </nav>
+
+</nav>
 
   
   <section class="hero-wrap js-fullheight" style="background-image: url('images/Website_Page.jpg');"
