--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <a class="navbar-brand" href="index.html" style="color: #ffbd39;">KEYDI</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span> MENU
+            <span class="navbar-toggler-icon"></span> Menu
         </button>
 
         <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
             <ul class="navbar-nav  ml-auto">
-                <li class="nav-item"><a href="index.html#home-section" class="nav-link "><span>Home</span></a></li>
-                <li class="nav-item"><a href="index.html#about-section" class="nav-link"><span>About</span></a></li>
-                <li class="nav-item"><a href="index.html#resume-section" class="nav-link"><span>Resume</span></a></li>
-                <li class="nav-item"><a href="index.html#skills-section" class="nav-link"><span>Skills</span></a></li>
-                <li class="nav-item"><a href="index.html#projects-section" class="nav-link"><span>Projects</span></a>
+                <li class="nav-item"><a href="#home-section" class="nav-link "><span>Home</span></a></li>
+                <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+                <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+                <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
+                <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a>
                 </li>
-                <li class="nav-item"><a href="index.html#blog-section" class="nav-link"><span>My Blog</span></a></li>
-                <li class="nav-item"><a href="index.html#contact-section" class="nav-link"><span>Contact</span></a></li>
+                <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
+                <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
             </ul>
         </div>
     </div>
@@ -60,7 +60,7 @@
 <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
     <div class="container ">
         <div class="row">
-            <div class="col-md-4 ">
+            <div class="col-md-5 ">
                 <img src="images/at.png" class="img-fluid" alt="Responsive image">
             </div>
             <div class="col-md-1 ">
@@ -262,7 +262,7 @@
                 <div class="progress-wrap ftco-animate">
                     <h3>JavaScript</h3>
                     <div class="progress">
-                        <div class="progress-bar color-3" role="progressbar" aria-valuenow="95" aria-valuemin="0"
+                        <div class="progress-bar color-4" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                             aria-valuemax="100" style="width:45%">
                             <span>45%</span>
                         </div>
