--- a/Blog.html
+++ b/Blog.html
@@ -112,7 +112,7 @@
               <img src="images/blog1_5.png" alt="" class="img-fluid">
             </p>
           <p>
-          <p>Beni okuduğunuz için teşekkür ederim.Umarım yararlı olmuştur.  Yazılarımız devam edecektir akipte kalın.</p>
+          <p>Beni okuduğunuz için teşekkür ederim.Umarım yararlı olmuştur.  Yazılarımız devam edecektir takipte kalın.</p>
 
 
 
@@ -131,7 +131,7 @@
               <div class="text">
                 <h3 class="heading"><a href="Blog3.html">React.js’de Propslar</a></h3>
                 <div class="meta">
-                  <div><a href="Blog3.html"><span class="icon-calendar"></span> June 7, 2020</a></div>
+                  <div><a href="Blog3.html"><span class="icon-calendar"></span> June 6, 2020</a></div>
                   <div><a href="Blog3.html"><span class="icon-person"></span> Keydi</a></div>
 
                 </div>
@@ -142,7 +142,7 @@
               <div class="text">
                 <h3 class="heading"><a href="Blog2.html">React.js’de Stateler</a></h3>
                 <div class="meta">
-                  <div><a href="Blog2.html"><span class="icon-calendar"></span> June 7, 2020</a></div>
+                  <div><a href="Blog2.html"><span class="icon-calendar"></span> June 6, 2020</a></div>
                   <div><a href="Blog2.html"><span class="icon-person"></span> Keydi</a></div>
                 </div>
               </div>
@@ -152,7 +152,7 @@
               <div class="text">
                 <h3 class="heading"><a href="Blog4.html">Entity Framework Nedir?</a></h3>
                 <div class="meta">
-                  <div><a href="Blog4.html"><span class="icon-calendar"></span> June 7, 2020</a></div>
+                  <div><a href="Blog4.html"><span class="icon-calendar"></span> June 6, 2020</a></div>
                   <div><a href="Blog4.html"><span class="icon-person"></span> Keydi</a></div>
                 </div>
               </div>
