--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             style="color: #ffbd39; font-family: 'Piedra', cursive; font-size: 20px;">Hello!</span></h1>
                     <h1 class="mb-4 mt-3" style="font-size: 45px;">I'm <span
                             style="color: #ffbd39; font-family: 'Piedra', cursive; font-size: 45px;">Kerem
-                            Danışmaz</span></h1>
+                            Danismaz</span></h1>
                     <h1 class="mb-4" style="font-family: 'Piedra', cursive; font-size: 30px;">A Freelance Web Designer
                     </h1>
                 </div>
@@ -453,7 +453,7 @@
                     <div class="text mt-3 float-right d-block">
                         <div class="d-flex align-items-center mb-3 meta">
                             <p class="mb-0">
-                                <span class="mr-2">June 7, 2020</span>
+                                <span class="mr-2">June 6, 2020</span>
                                 <a href="#" class="mr-2">Keydi</a>
 
                             </p>
@@ -473,7 +473,7 @@
                     <div class="text mt-3 float-right d-block">
                         <div class="d-flex align-items-center mb-3 meta">
                             <p class="mb-0">
-                                <span class="mr-2">June 7, 2020</span>
+                                <span class="mr-2">June 6, 2020</span>
                                 <a href="#" class="mr-2">Keydi</a>
                             </p>
                         </div>
@@ -492,7 +492,7 @@
                     <div class="text mt-3 float-right d-block">
                         <div class="d-flex align-items-center mb-3 meta">
                             <p class="mb-0">
-                                <span class="mr-2">June 7, 2020</span>
+                                <span class="mr-2">June 6, 2020</span>
                                 <a href="#" class="mr-2">Keydi</a>
                             </p>
                         </div>
