Wrong text and text  color fixed.

--- a/Blog3.html
+++ b/Blog3.html
@@ -63,10 +63,10 @@
     <div class="container">
       <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
         <div class="col-md-12 ftco-animate pb-5 mb-3 text-center">
-          <h1 class="mb-3 bread">Blog Single Post</h1>
+          <h1 class="mb-3 bread" style="color: #ffbd39;">React.js’de Propslar</h1>
           <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
-                  class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i
-                  class="ion-ios-arrow-forward"></i></a></span> <span>Blog Single <i
+                  class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="Blog3.html">Blog <i
+                  class="ion-ios-arrow-forward"></i></a></span> <span>React.js’de Propslar <i
                 class="ion-ios-arrow-forward"></i></span></p>
         </div>
       </div>
