Add ShopStar link

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                     style="background-image: url(images/Shopstar.jpg);">
                     <div class="overlay"></div>
                     <div class="text text-center p-4">
-                        <h3>Shopstar.com</h3>
+                        <h3><a target="_blank" href="https://shopsstar.herokuapp.com/Ana-sayfa.html">ShopStar (Click)</a></h3>
                         <span>Web Application</span>
                         <p style="color: #ffffff">• It is an online shopping web application where ssers are able to
                             sell their old clothes for a price and also clients will be able to buy fashion products
