Fixed  ğrpject  projects

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
                     <div class="text">
                         <p class="mb-4">
                             <span class="number" data-number="10">10</span>
-                            <span>project is being done</span>
+                            <span>Projects is being done</span>
                             <br>
                             <span class="number" data-number="2">2</span>
-                            <span>Project completed</span>
+                            <span>Projects completed</span>
                         </p>
                         <button type="button" class="btn btn-primary  py-3 px-3" data-toggle="modal"
                             data-target=".bd-example-modal-xl">See My CV</button>
