--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                         </p>
                         <button type="button" class="btn btn-primary  py-3 px-3" data-toggle="modal"
                             data-target=".bd-example-modal-xl">See My CV</button>
+                        <a type="button" class="btn btn-primary  py-3 px-3" href="MyDegree.html">See My Degree</a>
                     </div>
                 </div>
             </div>
