--- a/MyDegree.html
+++ b/MyDegree.html
@@ -70,7 +70,7 @@
           <h1 class="mb-3 bread" style="color: #ffbd39;">İGA UÇAN FİKİRLER PROJE YARIŞMASI 2.LiK</h1>
           <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
                   class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="Blog.html">Blog <i
-                  class="ion-ios-arrow-forward"></i></a></span> <span>Heroku Nedir ? <i
+                  class="ion-ios-arrow-forward"></i></a></span> <span>Yarışma Derecesi <i
                 class="ion-ios-arrow-forward"></i></span></p>
         </div>
       </div>
